# Seadusloome

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  estonian-legal-ontology-plan.md  pyproject.toml
app/: config.py  db.py  db_utils.py  main.py  metrics.py  metrics_middleware.py  observability.py  version.py
docker/: .dockerignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
docs/: 2026-04-09-plan-analysis.md  2026-04-10-code-review.md  2026-04-11-code-review.md  2026-04-16-code-review-pr-651.md  2026-04-17-code-review-89c3822.md  2026-04-29-ui-review-seadusloome-live.md  2026-04-30-password-management-prevention.md  2026-05-11-ministry-lawyer-ui-structure.md  2026-05-12-oiguskaart-evidence-map.md  2026-05-12-ui-plan-explorer-home.html  2026-05-15-ontology-six-use-cases-plan.md  2026-05-18-bugfix-plan.md  2026-05-18-social-ministry-usability-testing-plan.md  2026-05-19-prod-verification-checklist.md  2026-05-19-usability-fixes-plan.md  2026-05-24-issue-cleanup-and-roadmap.md  2026-06-10-system-code-review.md  2026-06-12-service-layer-convention.md  a1-implementation-summary.md  a6-implementation-summary.md  accessibility-checklist.md  b3-implementation-summary.md  c0-implementation-summary.md  nfr-baseline.md
migrations/: 001_initial.sql  002_seed.sql  003_add_users_is_active.sql  004_admin_seed_fix.sql  005_phase2_document_upload.sql  006_encrypt_parsed_text_and_drafting_tables.sql  007_llm_usage.sql  008_chat_tables.sql  009_rag_chunks.sql  010_fk_and_index_fixes.sql  011_phase4_collaboration.sql  012_fix_cascade_and_constraints.sql  013_sync_log_current_step.sql  014_encrypt_chat_messages.sql  015_draft_archive_warning.sql  016_rag_tenant_scoping.sql  017_chat_ux_features.sql  018_draft_error_debug.sql  019_draft_doc_type_and_vtk_lineage.sql  020_add_users_token_version.sql  021_mask_leaked_env_errors.sql  022_widen_leaked_error_masking.sql  (+24 more)
(+549 files in other folders)
